# AI-Sherpa-Setup

./: .gitignore  .mcp.json  .opencode.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  ROADMAP.md  plugins.json  setup.bat  setup.ps1  setup.sh  skills_report.html
analyzer-prototype/: .gitignore  README.md  pyproject.toml
analyzer-prototype/%TEMP%/analyzer-smoke/: summary.html
analyzer-prototype/%TEMP%/analyzer-smoke/issues/: 001-only-0-18-sessions-invoked-any-installed-skill.md  002-3-accept-then-revert-edit-pairs-detected.md  003-skill-accessibility-has-near-zero-fire-rate-0-18-sessions.md  004-skill-best-practices-has-near-zero-fire-rate-0-18-sessions.md  005-skill-board-bringup-has-near-zero-fire-rate-0-18-sessions.md  006-skill-build-system-has-near-zero-fire-rate-0-18-sessions.md  007-skill-connectivity-ble-has-near-zero-fire-rate-0-18-sessions.md  008-skill-connectivity-ip-has-near-zero-fire-rate-0-18-sessions.md  009-skill-connectivity-usb-can-has-near-zero-fire-rate-0-18-sess.md  010-skill-core-web-vitals-has-near-zero-fire-rate-0-18-sessions.md  011-skill-devicetree-has-near-zero-fire-rate-0-18-sessions.md  (+38 more)
analyzer-prototype/analyzer/: __init__.py  cli.py  embeddings.py  ingest.py  render.py
analyzer-prototype/analyzer/detectors/: __init__.py  base.py  embedding.py  tabular.py
analyzer-prototype/analyzer/templates/: summary.html.j2
analyzer-prototype/tests/: test_cli_smoke.py  test_embedding_detectors.py  test_embeddings.py  test_ingest.py  test_render.py  test_tabular_detectors.py
analyzer-prototype/tests/fixtures/: minimal-session.jsonl
(+118 files in other folders)
