[project]
name = "ai-sherpa-analyzer-prototype"
version = "0.1.0"
description = "Local-data Phase 0.5 prototype for the AI Sherpa analyzer."
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "sentence-transformers>=2.5",
    "scikit-learn>=1.4",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["analyzer*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
analyzer = ["templates/*.j2"]
